--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Amson Liu # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Amson is a Microsoft professional with a desire to create value through experimentation, passion, and creativity. Growing up as a third culture kid in NYC, he has an international mindset and thrives in diverse and collaborative environments. His career interests include content development, user experience, data science, and cloud technologies.
+  Amson is a Microsoft professional with a desire to create value through passion, experimentation, and creativity. Growing up as a third culture kid in NYC, he has an international mindset and thrives in diverse and collaborative environments. His career interests include content development, user experience, data science, and cloud technologies.
   <br><br>
   <a href="https://www.linkedin.com/in/amsonliu/">View My LinkedIn Profile</a> 
   
