--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Amson is a Microsoft professional with a desire to create value through passion, experimentation and creativity. Growing up as a third culture kid in NYC, he has an international mindset and thrives in diverse and collaborative environments. His career interests include content development, user experience, data science, and cloud technologies.
   <br><br>
-  <a href="https://www.linkedin.com/in/amsonliu/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/amsonliu/" target="_blank">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
