--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Amson Liu # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Amson is a Microsoft professional with a desire to create value through passion, experimentation and creativity. Growing up as a third culture kid in NYC, he has an international mindset and thrives in diverse and collaborative environments. His career interests include content strategy, user experience, education, and cloud technologies.
+  Amson is a multi-disciplinary professional with a desire to create value through experimentation and creativity. Growing up as a multilingual kid in NYC, he has an international mindset and thrives in diverse and inclusive environments. His career interests include technical writing and translation, content localization, language education, intercultural communications, and applied linguistics.
   <br><br>
   <a href="https://www.linkedin.com/in/amsonliu/" target="_blank">View My LinkedIn Profile</a> 
   
