--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Amson Liu # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Amson is a multi-disciplinary professional with a desire to create value through experimentation and creativity. Growing up as a multilingual kid in NYC, he has an international mindset and thrives in diverse and inclusive environments. His career interests include technical writing, content localization, technical translation, and content editing.
-  <a href="https://www.linkedin.com/in/amsonliu/" target="_blank">View My LinkedIn Profile</a> 
+  <br><a href="https://www.linkedin.com/in/amsonliu/" target="_blank">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
