--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: <a href="https://www.linkedin.com/in/amsonliu/" target="_blank">Amson Liu</a>  # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Amson is a multi-disciplinary professional with a desire to create value through experimentation and creativity. Growing up as a multilingual kid in NYC, he has an international mindset and thrives in diverse and inclusive environments. His career interests include technical writing, content localization, content strategy, and content editing.
+  Amson is a multi-disciplinary professional with a desire to create value through experimentation and creativity. Growing up as a multilingual kid in NYC, he has an international mindset and thrives in diverse and inclusive environments. His career interests include technical writing, content localization, content development, and instructional design.
   <br>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
