--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud computing, AI/ML, content development, and instructional design.
   <br>
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: G-TQXE0V26CX # your Google Analytics tracking ID here
