--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Amson Liu – Technical Writer
 description: Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
-theme: jekyll-theme-orderedlist
+theme: jekyll-theme-minimal
 show_downloads: false
 google_analytics: G-TQXE0V26CX
