Modify title and add logo to _config.yml
Updated title and logo in the configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Amson Liu – Technical Writer
-description: Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
+title: Amson Liu
+logo: "/images/logo.png?raw=true"
+description: >
+  Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
+  <br>
 theme: jekyll-theme-minimal
-show_downloads: false
 google_analytics: G-TQXE0V26CX
