Change logo image to profile picture
Updated logo path in configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Amson Liu
-logo: "/images/logo.png?raw=true"
+logo: "/images/profile_pic.png?raw=true"
 description: >
   Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
   <br>
