--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Amson Liu
-logo: "/images/profile_pic.png?raw=true"
+logo: "/images/profile_pic.png"
+logo_alt: "Amson Liu's headshot."
 description: >
   Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
   <br>
