--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Amson Liu"
 seo:
-  title: false
+  title_template: "%s"
 logo: "/images/profile_pic.png"
 logo_alt: "Amson Liu's headshot."
 description: >
