Add SEO tag configuration to _config.yml
Added Jekyll SEO tag configuration with title template.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: "Amson Liu"
+jekyll_seo_tag:
+  title_template: "%s" 
 logo: "/images/profile_pic.png"
 logo_alt: "Amson Liu's headshot."
 description: >
