--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,13 @@ logo: "/images/profile_pic.png"
 logo_alt: "Amson Liu's headshot."
 description: >
   Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design.
-  <br>
 theme: jekyll-theme-minimal
 google_analytics: G-TQXE0V26CX
+url: "https://amsliu.github.io"
+baseurl: ""
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+jekyll_seo_tag:
+  title: "Amson Liu's Portfolio"
+  description: "Amson is a multi-disciplinary professional with a passion for technology, education, and language. His career interests include technical writing, cloud security, AI/ML, content development, and instructional design."
